# rusty-payment-ecosystem

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
agents/: Cargo.toml
agents/bank/: Cargo.toml
agents/bank/src/: apigateway.rs  domain.rs  lib.rs  utils.rs
agents/bank/src/models/: card.rs
agents/bank/src/usecase/: memory.rs  mod.rs
agents/bank/tests/: apigateway.rs
agents/shared/: Cargo.toml
agents/shared/src/: settings.rs  utils.rs
agents/shared/src/ports/: secondary.rs
agents/shared/src/usecase/: rds.rs
bank/: Cargo.toml
bank/src/: apigateway.rs  domain.rs  lib.rs  utils.rs
bank/src/models/: card.rs  customer.rs  mod.rs
bank/src/usecase/: memory.rs  mod.rs  rds.rs
bank/tests/: apigateway.rs
config/: ecosystem.yaml  example-base.yaml  example-local.yaml
deploy/: Cargo.toml  aurora_cluster_template.yaml  bank_agent_template.yaml  bank_no_db_template.yaml
deploy/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/ports/: secondary.rs
scenario/: 01-database-connection.md  02-account_management.md  03-order_card.md  04-transaction.md  99-TEMPLATE.md
shared/: Cargo.toml
shared/sql_macros/: Cargo.toml
shared/sql_macros/src/: lib.rs
shared/sql_macros/tests/: sql.rs
shared/src/: error.rs  lib.rs  rds_client.rs  settings.rs  utils.rs
shared/src/ports/: mod.rs  secondary.rs
shared/src/usecase/: in_memory.rs  memory.rs  mod.rs  rds.rs
