[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
iso8583_rs = "0.1.10"
lambda_http = { version = "0.14.0" , optional = true }
lambda_runtime ={ version =  "0.13.0", optional = true }
rayon = { version = "1.5", optional = true }
log = "0.4.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.85"
aws-config = "1.5.13"
aws-sdk-rdsdata = "1.54.0"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
color-eyre = "0.6.3"
shared = { path = "../shared" }

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread"]


[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dev-dependencies]
aws-smithy-runtime = "1.7.6"
pretty_assertions = "1"
rand = "0.8"

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http", "rayon"]

[[bin]]
name = "iso8583-server"
path = "src/bin/server.rs"

[[bin]]
name = "init-db"
path = "src/bin/lambda/init-db.rs"
required-features = ["lambda"]

[[bin]]
name = "get-balance"
path = "src/bin/lambda/get-balance.rs"
required-features = ["lambda"]
