[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config= { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.61.0" 
shared = { path = "../shared" }
aws-sdk-rds = "1.54.0"
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"