[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.14.0" }
tracing = "0.1.41"
aws-config = "1.5.13"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shared = { path = "../shared" }

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread"]


[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dev-dependencies]
aws-smithy-runtime = "1.7.6"
pretty_assertions = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }



[[bin]]
name = "get-balance"
path = "src/bin/lambda/get-balance.rs"


[[bin]]
name = "create-account"
path = "src/bin/lambda/create-account.rs"
