[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
async-trait = "0.1.85"
http = "1.2.0"
lambda_http = "0.14.0"
aws-sdk-rdsdata = "1.54.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
web = "0.2.12"
openssl = { version = "0.10.35", features = ["vendored"] }
config = "0.15.6"
aws-config = "1.5.13"
sql_macros = { path = "./sql_macros" }
serial_test = "3.2.0"

[dev-dependencies]
pretty_assertions = "1"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.secrecy]
version = "0.8.0"
features = ["serde"]


[dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread"]
