[package]
name = "sql_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "sql_macros"
path = "src/lib.rs"
proc-macro = true


[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"
aws-sdk-rdsdata = "1.54.0"

[dev-dependencies]
pretty_assertions = "1"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",
]